[gd_scene load_steps=5 format=3 uid="uid://7qt5cys60ti4"]

[ext_resource type="Script" path="res://scenes/roots/main/menu.gd" id="1_8aya2"]
[ext_resource type="PackedScene" uid="uid://c7khnlrdtspt" path="res://scenes/fade_transition/fade_transition.tscn" id="2_dglu1"]
[ext_resource type="AudioStream" uid="uid://cj5v4wj4fjip6" path="res://assets/audio/summoning.wav" id="3_qlvyn"]
[ext_resource type="Texture2D" uid="uid://cs8e65w3i3pqo" path="res://scenes/roots/main/textures/splash.png" id="4_q1yc4"]

[node name="UI" type="Control" node_paths=PackedStringArray("fadeTransition", "volume")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_8aya2")
fadeTransition = NodePath("FadeTransition")
volume = NodePath("VBoxContainer2/HSlider")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qlvyn")
volume_db = -5.0
autoplay = true

[node name="TextureRect" type="TextureRect" parent="."]
auto_translate_mode = 1
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0
texture = ExtResource("4_q1yc4")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = 60.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Btn Start" type="Button" parent="VBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "Start"

[node name="Label" type="Label" parent="VBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "Volume"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="VBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2

[node name="Credits" type="Button" parent="VBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "Credits"

[node name="FadeTransition" parent="." node_paths=PackedStringArray("animationPlayer") instance=ExtResource("2_dglu1")]
layout_mode = 1
animationPlayer = NodePath("ColorRect/AnimationPlayer")

[connection signal="button_down" from="VBoxContainer2/Btn Start" to="." method="_on_btn_start_button_down"]
[connection signal="value_changed" from="VBoxContainer2/HSlider" to="." method="_on_h_slider_value_changed"]
